--- a/4.3.2/modded/Localizable.strings
+++ b/4.3.2/modded/Localizable.strings
@@ -275,7 +275,7 @@
 "Rounded - Small" = "Закругление - Слабое";
 "Rounded - Medium" = "Закругление - Среднее";
 "Add Icon" = "Добавить Иконку";
-"Fill" = "Заполненный";
+"Fill" = "Заполнение";
 "Round" = "Закруглённый";
 "Corner" = "Corner"; // Check it
 "Flat" = "Плоский";
